[gd_scene load_steps=2 format=3 uid="uid://ci5o4ealea8oi"]

[ext_resource type="Script" path="res://Scripts/win_screen.gd" id="1_n3w4q"]

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n3w4q")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.742314, 0.480675, 0.605035, 1)

[node name="HomeButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.447
anchor_right = 0.5
anchor_bottom = 0.447
offset_left = -78.0
offset_top = 109.272
offset_right = 46.0
offset_bottom = 172.272
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Home
"

[node name="WinMessage" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.437
anchor_top = 0.466
anchor_right = 0.437
anchor_bottom = 0.466
offset_left = -175.712
offset_top = -147.184
offset_right = 256.288
offset_bottom = -78.184
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Congrats you win!"

[connection signal="pressed" from="HomeButton" to="." method="_on_home_button_pressed"]
